--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,9 @@ find_package(spdlog CONFIG)
 find_package(docopt CONFIG)
 
 # Generic test that uses conan libs
-add_executable(intro main.cpp)
+add_executable(grandrounds main.cpp)
 target_link_libraries(
-  intro
+  grandrounds
   PRIVATE project_options
           project_warnings
           docopt::docopt
@@ -13,10 +13,10 @@ target_link_libraries(
           spdlog::spdlog)
 
 target_link_system_libraries(
-  intro
+  grandrounds
   PRIVATE
   ftxui::screen
   ftxui::dom
   ftxui::component)
 
-target_include_directories(intro PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
+target_include_directories(grandrounds PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
