Work-in-progress

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,20 @@
 find_package(fmt CONFIG)
 find_package(spdlog CONFIG)
 find_package(docopt CONFIG)
+find_package(nlohmann_json)
+find_package(lodepng REQUIRED)
+find_package(range-v3 REQUIRED)
 
-# Generic test that uses conan libs
-add_executable(grandrounds main.cpp)
+add_executable(grandrounds main.cpp "grid.hpp" "range.hpp")
 target_link_libraries(
   grandrounds
   PRIVATE project_options
           project_warnings
           docopt::docopt
           fmt::fmt
+          lodepng::lodepng
+          nlohmann_json::nlohmann_json
+          range-v3::range-v3
           spdlog::spdlog)
 
 target_link_system_libraries(
