Switch GSL to FetchContent

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,11 @@
+# Disabled lines are fetched via FetchContent instead of Conan and do not need find_package
 find_package(fmt CONFIG)
 find_package(spdlog CONFIG)
 find_package(docopt CONFIG)
-find_package(Microsoft.GSL)
+#find_package(Microsoft.GSL)
 find_package(nlohmann_json)
 find_package(lodepng REQUIRED)
-#find_package(range-v3 REQUIRED) # Disable when using FetchContent instead of Conan
+#find_package(range-v3 REQUIRED)
 
 add_executable(grandrounds main.cpp "grid.hpp" "range.hpp" "nonogram_component.hpp" "nonogram.hpp" "nonogram.cpp" "nonogram_component.cpp")
 target_link_libraries(
