Remove docopt and spdlog

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,7 @@
 # Disabled lines are fetched via FetchContent instead of Conan and do not need find_package
-find_package(fmt CONFIG)
-find_package(spdlog CONFIG)
-find_package(docopt CONFIG)
-#find_package(Microsoft.GSL)
-find_package(nlohmann_json)
+find_package(fmt REQUIRED)
+#find_package(Microsoft.GSL REQUIRED)
+find_package(nlohmann_json REQUIRED)
 find_package(lodepng REQUIRED)
 #find_package(range-v3 REQUIRED)
 
@@ -12,12 +10,10 @@ target_link_libraries(
   grandrounds
   PRIVATE project_options
   project_warnings
-  docopt::docopt
   fmt::fmt
   lodepng::lodepng
   Microsoft.GSL::GSL
-  nlohmann_json::nlohmann_json
-  spdlog::spdlog)
+  nlohmann_json::nlohmann_json)
 
 target_link_system_libraries(
   grandrounds
